<resources>
    <string name="app_name">Library Visit</string>
    <string name="SplashLine1">Welcome to Library Visit App!</string>
    <string name="PrefScreen_Notification">Notifications</string>
    <string name="PrefScreen_Languages">Languages</string>
    <string name="SplashLine2">Here, you can enter all the Students visits to the library.</string>
    <string name="Enter_RollNo_ET">Enter RollNo.</string>
    <string name="Enter_Name_ET">Enter Name</string>
    <string name="Enter_Course_ET">Enter Course</string>
    <string name="action_settings">Settings</string>
    <string name="Open">Open</string>
    <string name="AddStu_Button">Add Student</string>
    <string name="ViewVisit_Button">View Visit</string>
    <string name="Close">Close</string>
    <string name="Update_Title">Update App</string>
    <string name="Update_Message">Application successfully updated! </string>
    <string name="Update_Button">Update</string>
    <string name="PrefScreen_Settings">Settings</string>
    <string name="PrefScreen_AboutUs">About Us</string>
    <string name="PrefScreen_CheckApp">Check App</string>
    <string name="PrefScreen_ResetApp">Reset App</string>
    <string name="version_settings">Version 1.0</string>
    <string name="fallbackmessage">No Student Visits Today!</string>
    <string name="Language_default_value">English</string>
    <string-array name="appSettingsLanguageListArray">
        <item>English</item>
        <item>Hindi</item>
    </string-array>

    <string-array name="appSettingsLanguageListValues">
        <item>1</item>
        <item>2</item>
    </string-array>
<!--    <string-array name="languages_entries">-->
<!--        <item>Hindi</item>-->
<!--        <item>English</item>-->
<!--        <item>French</item>-->
<!--    </string-array>-->
<!--    <string-array name="languages_values">-->
<!--        <item>Hindi</item>-->
<!--        <item>English</item>-->
<!--        <item>French</item>-->
<!--    </string-array>-->

</resources>